--- a/web/manifold.html
+++ b/web/manifold.html
@@ -58,9 +58,28 @@ permalink: "{{ page.filePathStem }}.html"
         The top <code>n</code> eigenvectors of the geodesic distance matrix, represent the
         coordinates in the new <code>n</code>-dimensional Euclidean space.</p>
 
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#scala_1" data-toggle="tab">Scala</a></li>
+        <li><a href="#java_1" data-toggle="tab">Java</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="scala_1">
+            <div class="code" style="text-align: left;">
     <pre class="prettyprint lang-scala"><code>
     def isomap(data: Array[Array[Double]], k: Int, d: Int = 2, CIsomap: Boolean = true): IsoMap
     </code></pre>
+            </div>
+        </div>
+        <div class="tab-pane" id="java_1">
+            <div class="code" style="text-align: left;">
+          <pre class="prettyprint lang-java"><code>
+    public class IsoMap {
+        public static IsoMap of(double[][] data, int k, int d, boolean conformal);
+    }
+          </code></pre>
+            </div>
+        </div>
+    </div>
 
     <p>The connectivity of each data point in the neighborhood graph is defined
         as its nearest <code>k</code> Euclidean neighbors in the high-dimensional space. This
@@ -91,6 +110,13 @@ permalink: "{{ page.filePathStem }}.html"
         The data contains 20,000 samples. Because it is computational intensive to calculate
         the shortest path for all samples, the example uses only the first 2,000 samples.</p>
 
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#scala_2" data-toggle="tab">Scala</a></li>
+        <li><a href="#java_2" data-toggle="tab">Java</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="scala_2">
+            <div class="code" style="text-align: left;">
     <pre class="prettyprint lang-scala"><code>
     val swissroll = read.csv("data/manifold/swissroll.txt", header=false, delimiter='\t').toArray
     plot(swissroll, '.', BLUE)
@@ -104,6 +130,30 @@ permalink: "{{ page.filePathStem }}.html"
         if (map.graph.hasEdge(i, j))
           window.canvas.line(x(i), x(j))
     </code></pre>
+            </div>
+        </div>
+        <div class="tab-pane" id="java_2">
+            <div class="code" style="text-align: left;">
+          <pre class="prettyprint lang-java"><code>
+    var swissroll = Read.csv("data/manifold/swissroll.txt", CSVFormat.DEFAULT.withDelimiter('\t')).toArray();
+    ScatterPlot.plot(swissroll, '.', Color.BLUE);
+
+    var map = IsoMap.of(Arrays.copyOf(swissroll, 2000), 7);
+    var x = map.coordinates;
+
+    var canvas = ScatterPlot.plot(x, '.', Color.BLUE);
+    for (int i = 0; i < x.length; i++) {
+        for (int j = 0; j < i; j++) {
+            if (map.graph.hasEdge(i, j)) {
+                canvas.line(x[i], x[j]);
+            }
+        }
+    }
+    canvas.window();
+          </code></pre>
+            </div>
+        </div>
+    </div>
 
     <p>In this example, we use <code>k = 7</code> for neighborhood graph. In the mapped
         2d space, we also plot the connections between neighbor neighbors.</p>
@@ -130,15 +180,51 @@ permalink: "{{ page.filePathStem }}.html"
         because there is no fixed unit to prevent the weights from drifting as
         various regions differ in sample densities.</p>
 
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#scala_3" data-toggle="tab">Scala</a></li>
+        <li><a href="#java_3" data-toggle="tab">Java</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="scala_3">
+            <div class="code" style="text-align: left;">
     <pre class="prettyprint lang-scala"><code>
     def lle(data: Array[Array[Double]], k: Int, d: Int = 2): LLE
     </code></pre>
+            </div>
+        </div>
+        <div class="tab-pane" id="java_3">
+            <div class="code" style="text-align: left;">
+          <pre class="prettyprint lang-java"><code>
+    public class LLE {
+        public static LLE of(double[][] data, int k, int d);
+    }
+          </code></pre>
+            </div>
+        </div>
+    </div>
 
     <p>The LLE using 8 neighbors on the swiss roll data is as follows.</p>
 
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#scala_4" data-toggle="tab">Scala</a></li>
+        <li><a href="#java_4" data-toggle="tab">Java</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="scala_4">
+            <div class="code" style="text-align: left;">
     <pre class="prettyprint lang-scala"><code>
     val map = lle(swissroll.slice(0, 2000), 8)
     </code></pre>
+            </div>
+        </div>
+        <div class="tab-pane" id="java_4">
+            <div class="code" style="text-align: left;">
+          <pre class="prettyprint lang-java"><code>
+    var map = LLE.of(Arrays.copyOf(swissroll, 2000), 8);
+          </code></pre>
+            </div>
+        </div>
+    </div>
 
     <div style="width: 100%; display: inline-block; text-align: center;">
         <img src="images/lle.png" class="enlarge" style="width: 480px;" />
@@ -154,9 +240,28 @@ permalink: "{{ page.filePathStem }}.html"
         algorithm may be viewed as a discrete approximation to a continuous map
         that naturally arises from the geometry of the manifold.</p>
 
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#scala_5" data-toggle="tab">Scala</a></li>
+        <li><a href="#java_5" data-toggle="tab">Java</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="scala_5">
+            <div class="code" style="text-align: left;">
     <pre class="prettyprint lang-scala"><code>
     def laplacian(data: Array[Array[Double]], k: Int, d: Int = 2, t: Double = -1): LaplacianEigenmap
     </code></pre>
+            </div>
+        </div>
+        <div class="tab-pane" id="java_5">
+            <div class="code" style="text-align: left;">
+          <pre class="prettyprint lang-java"><code>
+    public class LaplacianEigenmap {
+        public static LaplacianEigenmap of(double[][] data, int k, int d, double t);
+    }
+          </code></pre>
+            </div>
+        </div>
+    </div>
 
     <p>where <code>t</code> is the smooth/width parameter of heat kernel
         <code>e<sup>-||x-y||<sup>2</sup>/t</sup></code>.
@@ -168,9 +273,26 @@ permalink: "{{ page.filePathStem }}.html"
 
     <p>The Laplacian Eigenmap on the swiss roll data is as follows.</p>
 
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#scala_6" data-toggle="tab">Scala</a></li>
+        <li><a href="#java_6" data-toggle="tab">Java</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="scala_6">
+            <div class="code" style="text-align: left;">
     <pre class="prettyprint lang-scala"><code>
     val map = laplacian(swissroll.slice(0, 1000), 10, 2, 25.0)
     </code></pre>
+            </div>
+        </div>
+        <div class="tab-pane" id="java_6">
+            <div class="code" style="text-align: left;">
+          <pre class="prettyprint lang-java"><code>
+    var map = LaplacianEigenmap.of(Arrays.copyOf(swissroll, 1000), 10, 2, 25.0);
+          </code></pre>
+            </div>
+        </div>
+    </div>
 
     <div style="width: 100%; display: inline-block; text-align: center;">
         <img src="images/laplacian.png" class="enlarge" style="width: 480px;" />
@@ -187,9 +309,18 @@ permalink: "{{ page.filePathStem }}.html"
         point in such a way that similar objects are modeled by nearby points
         and dissimilar objects are modeled by distant points.</p>
 
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#scala_7" data-toggle="tab">Scala</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="scala_7">
+            <div class="code" style="text-align: left;">
     <pre class="prettyprint lang-scala"><code>
     def tsne(X: Array[Array[Double]], d: Int = 2, perplexity: Double = 20.0, eta: Double = 200.0, iterations: Int = 1000): TSNE
     </code></pre>
+            </div>
+        </div>
+    </div>
 
     <p>where <code>X</code> is input data, <code>perplexity</code> is the perplexity
         of the conditional distribution, <code>eta</code> the learning rate, and <code>iterations</code> is
@@ -199,6 +330,13 @@ permalink: "{{ page.filePathStem }}.html"
     <p>The t-SNE on the MNIST data is as follows. Note that the input data is preprocessed
         using PCA to reduce the dimensionality to 50 before t-SNE is performed.</p>
 
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#scala_8" data-toggle="tab">Scala</a></li>
+        <li><a href="#java_8" data-toggle="tab">Java</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="scala_8">
+            <div class="code" style="text-align: left;">
     <pre class="prettyprint lang-scala"><code>
     val x = read.csv("data/mnist/mnist2500_X.txt", header=false, delimiter=' ').toArray
     val y = read.csv("data/mnist/mnist2500_labels.txt", header=false, delimiter=' ').column(0).toIntArray
@@ -208,6 +346,29 @@ permalink: "{{ page.filePathStem }}.html"
     val sne = tsne(x50, 3, 20, 200, 1000)
     plot(sne.coordinates, y, 'o', Palette.COLORS)
     </code></pre>
+            </div>
+        </div>
+        <div class="tab-pane" id="java_8">
+            <div class="code" style="text-align: left;">
+          <pre class="prettyprint lang-java"><code>
+    var format = CSVFormat.DEFAULT.withDelimiter(' ');
+    var mnist = Read.csv(Paths.getTestData("mnist/mnist2500_X.txt"), format).toArray();
+    var labels = Read.csv(Paths.getTestData("mnist/mnist2500_labels.txt"), format).column(0).toIntArray();
+
+    var pca = PCA.fit(mnist);
+    pca.setProjection(50);
+    var X = pca.project(mnist);
+
+    var perplexity = 20;
+    var tsne = new TSNE(X, 2, perplexity, 200, 1000);
+
+    var plot = ScatterPlot.plot(tsne.coordinates, labels, '@', Palette.COLORS);
+    plot.setTitle("t-SNE of MNIST");
+    plot.window();
+          </code></pre>
+            </div>
+        </div>
+    </div>
 
     <div style="width: 100%; display: inline-block; text-align: center;">
         <img src="images/tsne.png" class="enlarge" style="width: 480px;" />
